# matching-core-rs

./: BENCHMARK_GUIDE.md  Cargo.toml  INTEGRATION_ARCHITECTURE.md  MATCHING_ENGINE_EXPLAINED.md  README.md  benchmark_results.csv  plot_benchmark.py
benches/: advanced_orderbook_bench.rs  comprehensive_bench.rs  exchange_bench.rs  orderbook_optimized_bench.rs
examples/: advanced_demo.rs  comprehensive_test.rs  direct_optimized_demo.rs  exchange_demo.rs  generate_benchmark_data.rs  load_test.rs
scripts/: plot_benchmark.py  run_benchmark.sh
src/: lib.rs  main.rs
src/api/: commands.rs  events.rs  market_data.rs  mod.rs  types.rs
src/core/: exchange.rs  journal.rs  mod.rs  orderbook.rs  pipeline.rs  snapshot.rs  users.rs
src/core/orderbook/: advanced.rs  direct.rs  direct_optimized.rs  naive.rs
src/core/processors/: grouping.rs  matching_engine.rs  mod.rs  risk_engine.rs
src/example/: integration_test.rs  mod.rs  orderbook_test.rs  risk_test.rs
tests/: advanced_orders_test.rs  edge_cases_test.rs
