[package]
name = "matching-core"
version = "0.2.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"  # 快照、状态序列化
disruptor = "3.6.1"
serde = { version = "1.0.219", features = ["derive"] }
lz4_flex = "0.11.3"
thiserror = "2.0.12"
anyhow = "1.0.86"

# rkyv 用于 WAL 高性能序列化
rkyv = { version = "0.7", default-features = false, features = ["alloc", "size_64", "std", "validation"] }

# 性能优化
smallvec = { version = "1.13", features = ["serde"] }

# 日志
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3" # 异步日志

# 内存映射 (替代 Chronicle Bytes / MappedBytes)
memmap2 = "0.9.5"
# 高性能对象池 (替代 Eclipse Collections 中的 Pool)
slab = { version = "0.4.9", features = ["serde"] }
# 快速哈希算法 (替代标准库默认 Hash)
ahash = { version = "0.8.12", features = ["serde"] }

# CPU 亲和性 (替代 OpenHFT Affinity)
core_affinity = "0.8.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "exchange_bench"
harness = false

[[bench]]
name = "orderbook_optimized_bench"
harness = false

[[bench]]
name = "comprehensive_bench"
harness = false

[[bench]]
name = "advanced_orderbook_bench"
harness = false